Fix asset preview metadata header alignment

--- a/webapp/WEB-INF/base/emfrontend/theme/styles/theme.css
+++ b/webapp/WEB-INF/base/emfrontend/theme/styles/theme.css
@@ -6634,7 +6634,7 @@ div.tableheaderactions a
 }
 
 
-#workarea ul li:first-child, #emcontainer #emselectable table th, .categories-widget, #emcontainer #emselectable #main-results-table tr td.checkbox, #emcontainer #emselectable table tr, #usersearchresultspanel .tab-actions, .list-adder {
+#emcontainer #resultslist #default-fields .settings-table tr td:first-child, #de-metadata #default-fields .cellrow span.bodylabel, #workarea ul li:first-child, #emcontainer #emselectable table th, .categories-widget, #emcontainer #emselectable #main-results-table tr td.checkbox, #emcontainer #emselectable table tr, #usersearchresultspanel .tab-actions, .list-adder {
     box-sizing: content-box;
     -moz-box-sizing: content-box;
 }
